# CS-EBOT

./: CMakeLists.txt
include/: engine.h  platform.h  runtime.h
source/: control.cpp  interface.cpp  support.cpp
